changed all statements of FluentIterables to java 8 streams